Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-shell gnome-shell
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,809
    • Issues 1,809
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 119
    • Merge requests 119
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • gnome-shellgnome-shell
  • Issues
  • #2574

Closed
Open
Created Apr 03, 2020 by Julien Enche@jenche

Shutdown dialog title flickers when the install update checkbox is checked

Description of problem: When the "install updates" checkbox is checked in the shutdown dialog, the dialog's title flickers (see attached screencast).

Version-Release number of selected component (if applicable): gnome-shell-3.36.1screencast

How reproducible: Each time.

Steps to Reproduce:

  1. Wait for update to be available to be installed offline
  2. Open the shutdown dialog
  3. Check the "install updates" checkbox

Actual results: Once the checkbox is checked, the dialog title starts to flicker

Expected results: Dialog's title should not flicker

Additional info: Happens on a french localized system. Doesn't happen on an English system because the title is then much shorter than in French.

Edited Apr 03, 2020 by Julien Enche
Assignee
Assign to
Time tracking